# tiny_avocado_tree

./: .gitignore  Cargo.toml  README.md
client/: .gitignore  Cargo.toml  index.html
client/src/: lib.rs  request.rs  router.rs  theme.rs  top_bar.rs
client/src/pages/: mod.rs
client/src/pages/login/: mod.rs
client/src/pages/register/: mod.rs  power.rs
server/: Cargo.toml
server/src/: auth.rs  init.rs  main.rs  user.rs
server/src/handlers/: auth.rs  mod.rs  register.rs  secret.rs
server/src/models/: error.rs  mod.rs  roots.rs  user.rs
server/src/utils/: mod.rs  password.rs
server/tests/: db.rs
shared/: Cargo.toml
shared/src/models/: auth.rs  mod.rs  power.rs  user.rs
