[package]
name = "client"
version = "0.1.0"
authors = ["arn-the-long-beard <arn.menant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib" ,"rlib"]

[dependencies]
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
shared = { path = "../shared" }
heck="0.3.1"

[dependencies.web-sys]
version = "0.3"


[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

